# hangout-app

./: .gitignore  CMakeLists.txt  README.md  build-download-page.cmd  package-lock.json  package.json  test.md  update.cmd
deploy/: deploy-backend.ps1  hangout-backend.service  nginx-hangout.conf  ubuntu-setup.sh  upload-updates.ps1
docs/: architecture.md
electron/: index.html  main.js  preload.js  renderer.js  run.js  styles.css
include/hangout/application/: auth_service.hpp  chat_service.hpp  event_bus.hpp  social_service.hpp
include/hangout/domain/: errors.hpp  models.hpp
include/hangout/storage/: database.hpp  repositories.hpp
include/hangout/transport/: http_server.hpp
scripts/: prepare-download-page.ps1  smoke_test.ps1  update-release.ps1
src/: main.cpp
src/application/: auth_service.cpp  chat_service.cpp  social_service.cpp
src/storage/: database.cpp  repositories.cpp
src/transport/: http_server.cpp
website/: README.md  download.js  index.html  site-config.js  styles.css
